--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-shadow {
+    @apply shadow;
+    box-shadow: -2px 10px 13px 0px rgba(191, 191, 191, 0.75);
+  }
